# rust-paste-it

./: .env.example  Cargo.toml  README.md  postman_collection.json
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250223_012638_change_to_ulid.rs  m20250223_013928_add_shortink.rs
src/: lib.rs  main.rs
src/db/: db.rs  mod.rs
src/entities/: mod.rs  paste.rs  prelude.rs
src/handlers/: handler.rs
src/models/: mod.rs  model.rs
src/routes/: api.rs  mod.rs  web.rs
src/views/: index.rs
src/views/templates/: 404.html  api-docs.html  index.html
