[package]
name = "paste-it"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
sea-orm = {version = "1.1.5", features = ["sqlx-postgres", "runtime-async-std"]}
serde = "1.0.218"
serde_json = "1.0.139"
tokio = {version = "*", features = ["full"]}
dotenv = "0.15"
ulid = "1.2.0"
base62 = "2.2.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = {version = "0.12.12", features = ["json"]}
